[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "LWIRImageTool"
version = "0.1.2"
description = "LWIR calibration and processing library"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "Pillow",
    "Matplotlib",
    "pydantic",
    "spectral"

]

[tool.setuptools.packages.find]
where = ["."]
